# docs/swagger.yaml
@@ -11,6 +11,15 @@ definitions:
         description: 总行数
         type: integer
     type: object
+  app.SwaggersTage:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.Tag'
+        type: array
+      page:
+        $ref: '#/definitions/app.Pager'
+    type: object
   errcode.Error:
     type: object
   model.Tag:
@@ -24,9 +33,6 @@ definitions:
       deleted_on:
         description: 删除时间，自动获取提交时间
         type: integer
-      id:
-        description: 主键
-        type: integer
       is_del:
         description: 是否删除 0为删除，1 已删除
         type: integer
@@ -39,20 +45,11 @@ definitions:
       name:
         description: 名称
         type: string
-      status:
+      state:
         description: 状态
-        type: string
+        type: integer
     type: object
-  model.TageSwagger:
-    properties:
-      list:
-        items:
-          $ref: '#/definitions/model.Tag'
-        type: array
-      page:
-        $ref: '#/definitions/app.Pager'
-    type: object
-  param.CreateTagRequest:
+  params.CreateTagRequest:
     properties:
       created_by:
         description: 创建人；min 和 max 限制的是长度 2-100s
@@ -65,7 +62,7 @@ definitions:
         minLength: 2
         type: string
       state:
-        description: 创建状态；默认是 1
+        description: 创建状态；默认是 1 状态 0为禁用、1为启用
         enum:
         - 0
         - 1
@@ -113,7 +110,7 @@ paths:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.TageSwagger'
+            $ref: '#/definitions/app.SwaggersTage'
         "400":
           description: 请求错误
           schema:
@@ -133,14 +130,14 @@ paths:
         name: object
         required: true
         schema:
-          $ref: '#/definitions/param.CreateTagRequest'
+          $ref: '#/definitions/params.CreateTagRequest'
       produces:
       - application/json
       responses:
         "200":
           description: 成功
           schema:
-            $ref: '#/definitions/model.TageSwagger'
+            $ref: '#/definitions/app.SwaggersTage'
         "400":
           description: 请求错误
           schema:
